Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117789

QmlCompiler generates invalid code for unary operator+

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.6.1, 6.6, 6.7.0 FF
    • 6.6
    • QML: Compiler
    • None
    • d4bab5635 (dev), 0eac64695 (6.6)

    Description

      See attached project:

      /home/ulf/build-cyclic-Desktop_Qt_6_6_0_GCC_64bit-Debug/.rcc/qmlcache/appcyclic_Constraint_qml.cpp: In lambda function:
      /home/ulf/build-cyclic-Desktop_Qt_6_6_0_GCC_64bit-Debug/.rcc/qmlcache/appcyclic_Constraint_qml.cpp:265:8: error: no match foroperator+’ (operand type is ‘std::remove_reference<QVariant&>::type’ {aka ‘QVariant’})
        265 | r2_3 = +std::move(r2_2);
            |        ^~~~~~~~~~~~~~~~
      

      It only happens from 6.6. 6.5 is not affected.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-117789
          # Subject Branch Project Status CR V

          Activity

            People

              olivier.decanniere Olivier De Cannière
              ulherman Ulf Hermann
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes